<resources>
    <string name="app_name">Delivery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_your_phone_number">write_your_phone_number</string>
    <string name="write_a_count_questions">write_a_count_questions</string>
    <string name="welcome1">добро пожаловать в приложение по доставке товаров</string>
    <string name="welcome2">это приложение по доставке товаров</string>
    <string name="i_am_courier">я курьер</string>
    <string name="i_am_client">я клиент</string>
    <string name="enter_in_app">войти</string>
    <string name="fast_shipping">хочу отправить товар быстро и прямо сейчас!</string>
    <string name="go_in_app">перейти в приложение</string>
    <string name="write_a_password">введи пароль</string>
    <string name="write_an_email">введи почту</string>
    <string name="write_a_surname">введи фамилию</string>
    <string name="write_a_name">введи имя</string>
    <string name="from">откуда</string>
    <string name="to">куда</string>
    <string name="delivery_cost">стоимость доставки</string>
    <string name="dimensions">объем посылки(см^3)</string>
    <string name="send">отправить</string>
    <string name="main">главная</string>
    <string name="enter_your_order_number">введи номер заказа</string>
    <string name="track_order">отследить заказ</string>
    <string name="my_orders">мои заказы</string>
    <string name="thing_cost">стоимость товара(в рублях)</string>
    <string name="result_sum">итоговая стоимость: Х рублей</string>
    <string name="courier">курьер</string>
    <string name="pick_up_point">пункт выдачи</string>
    <string name="id_recipient">id получателя(см.профиль)</string>
    <string name="success_payment">success_payment</string>
    <string name="registration">Регистрация</string>
    <string name="send_enter">отправить</string>
    <string name="change">изменить</string>
    <string name="save_changings">сохранить изменения</string>
    <string name="qr_code">qr-код</string>
    <string name="order_status_from_the_sender">у отправителя</string>
    <string name="order_status_from_the_recipient">у получателя</string>
    <string name="order_status_at_the_courier">у курьера</string>
    <string name="get_price">рассчитать стоимость</string>
    <string name="scan_qr">сканировать qr</string>
    <string name="for_me">мне</string>
    <string name="from_me">от меня</string>
    <string name="i">i</string>
    <string name="good">понятно</string>

</resources>