<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:orientation="vertical"
    tools:context=".presentation.fragments.WelcomeFragment">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:breakStrategy="simple"
        android:fontFamily="sans-serif-light"
        android:hyphenationFrequency="none"
        android:text="@string/welcome1"
        android:textColor="@color/black"
        android:textSize="52sp"
        android:layout_weight="1"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_registration"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/dark_beige_drawable"
        android:radius="150dp"
        android:text="@string/registration"
        android:layout_weight="1"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_auth"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/dark_beige_drawable"
        android:radius="150dp"
        android:text="@string/enter_in_app"
        android:layout_weight="1"

        />

</LinearLayout>