<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:orientation="vertical"
    tools:context=".presentation.fragments.RegistrationFragment">

    <RadioGroup

        android:id="@+id/rb_group"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/rounded_group_button_background"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/rb_courier"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/i_am_courier"
            android:textAppearance="@drawable/rb_text_appearance"
            android:textColor="@drawable/radio_text_color"
            android:textSize="16sp"

            />

        <RadioButton
            android:id="@+id/rb_client"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/i_am_client"
            android:textAppearance="@drawable/rb_text_appearance"
            android:textColor="@drawable/radio_text_color"
            android:textSize="16sp"

            />
    </RadioGroup>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/write_a_name"
        android:background="@drawable/input_til_drawable"
        app:startIconDrawable="@drawable/baseline_person_24"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:layout_marginStart="@dimen/margin_for_et"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout


        android:id="@+id/til_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/write_a_surname"
        android:background="@drawable/input_til_drawable"
        app:startIconDrawable="@drawable/baseline_person_24"
        app:endIconMode="clear_text"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginStart="@dimen/margin_for_et"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/write_an_email"
        android:background="@drawable/input_til_drawable"
        app:startIconDrawable="@drawable/baseline_alternate_email_24"
        app:endIconMode="clear_text"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginStart="@dimen/margin_for_et"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/input_til_drawable"
        android:hint="@string/write_a_password"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginStart="@dimen/margin_for_et"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:enabled="false"
        android:id="@+id/btn_enter"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/dark_beige_drawable"
        android:text="@string/registration"

        >


    </androidx.appcompat.widget.AppCompatButton>

</LinearLayout>