<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"

    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:elevation="0dp"
            >

            <com.yandex.mapkit.mapview.MapView
                android:id="@+id/mapview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
                <!--android:foreground="@drawable/input_til_drawable"-->

        </androidx.cardview.widget.CardView>
    </FrameLayout>


    <LinearLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@drawable/bottom_sheet"
        android:orientation="vertical"
        android:paddingTop="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_remove_24"
            android:layout_marginHorizontal="20sp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="4dp"
            android:background="@drawable/input_til_drawable"
            android:hint="@string/from"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/baseline_search_24"
            app:startIconDrawable="@drawable/baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_from"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/margin_for_et"
                android:background="@android:color/transparent"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="4dp"
            android:background="@drawable/input_til_drawable"
            android:hint="@string/to"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/baseline_search_24"
            app:startIconDrawable="@drawable/baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_to"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/margin_for_et"
                android:background="@android:color/transparent"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="4dp"
            android:background="@drawable/input_til_drawable"
            android:hint="@string/thing_cost"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/margin_for_et"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_dimensions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="4dp"
            android:background="@drawable/input_til_drawable"
            android:hint="@string/dimensions"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_dimensions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/margin_for_et"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_recipient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="4dp"
            android:background="@drawable/input_til_drawable"
            android:hint="@string/id_recipient"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_recipient"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/margin_for_et"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_get_price"
                android:layout_height="60dp"
                android:layout_width="0dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/dark_beige_drawable"
                android:layout_weight="1"
                android:text="@string/get_price"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/dark_beige_drawable"
                android:text="@string/send"
                android:textColor="@color/black" />

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
