<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/beige"
    android:orientation="vertical"
    tools:context=".presentation.fragments.MainFragment">
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/scan_qr"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="8dp"
        android:layout_height="60dp"
        android:text="@string/scan_qr"
        android:background="@drawable/dark_beige_drawable"
        />

    <RadioGroup
        android:id="@+id/rb_group"
        android:layout_marginTop="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/rounded_group_button_background"
        android:orientation="horizontal"

        >

        <RadioButton
            android:id="@+id/rb_get"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/for_me"
            android:textSize="16sp"
            android:textAppearance="@drawable/rb_text_appearance"
            android:textColor="@drawable/radio_text_color"

            />

        <RadioButton
            android:id="@+id/rb_send"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_background"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/from_me"
            android:textSize="16sp"
            android:textAppearance="@drawable/rb_text_appearance"
            android:textColor="@drawable/radio_text_color"

            />
    </RadioGroup>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/rb_group"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <include layout="@layout/list_item_shimmer"/>
            <include layout="@layout/list_item_shimmer"/>
            <include layout="@layout/list_item_shimmer"/>
            <include layout="@layout/list_item_shimmer"/>
            <include layout="@layout/list_item_shimmer"/>
            <include layout="@layout/list_item_shimmer"/>

        </LinearLayout>



    </com.facebook.shimmer.ShimmerFrameLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/rb_group"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="50dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />



</LinearLayout>